tests/test_assets/semantic/invalid/builtins/wrapping_constant_call_types.expected
semantic error at line 1: wrong number of arguments to builtin 'wrapping_add': expected 2, got 1
semantic error at line 2: builtin 'wrapping_add' requires concrete integer arguments
semantic error at line 3: builtin 'wrapping_add' requires arguments of the same integer type
semantic error at line 4: builtin 'wrapping_neg' requires a concrete integer argument
4 semantic errors generated.
